force-app/main/default/objects/ProdutoPassageiro__c/ProdutoPassageiro__c.object-meta.xml
<CustomObject>
    <label>Produto do Passageiro</label>
    <nameField>
        <displayFormat>PPO-{0000000}</displayFormat>
        <label>Produto do Passageiro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos do Passageiro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>