force-app/main/default/objects/ProdutoPassageiro__c/fields/CEPServico__c.field-meta.xml
<CustomField>
    <fullName>CEPServico__c</fullName>
    <label>CEP Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>