force-app/main/default/objects/ProdutoPassageiro__c/fields/CidadeServico__c.field-meta.xml
<CustomField>
    <fullName>CidadeServico__c</fullName>
    <label>Cidade Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>