force-app/main/default/objects/ProdutoPassageiro__c/fields/CompanhiaAerea__c.field-meta.xml
<CustomField>
    <fullName>CompanhiaAerea__c</fullName>
    <label>Companhia Aérea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>