force-app/main/default/objects/ProdutoPassageiro__c/fields/Configurado__c.field-meta.xml
<CustomField>
    <fullName>Configurado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configurado?</label>
    <type>Checkbox</type>
</CustomField>