force-app/main/default/objects/ProdutoPassageiro__c/fields/EstadoServico__c.field-meta.xml
<CustomField>
    <fullName>EstadoServico__c</fullName>
    <label>Estado Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>