force-app/main/default/objects/ProdutoPassageiro__c/fields/NomePassageiro__c.field-meta.xml
<CustomField>
    <fullName>NomePassageiro__c</fullName>
    <formula>Passageiro__r.FirstName + &apos; &apos; + Passageiro__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passageiro</label>
    <type>Text</type>
</CustomField>