force-app/main/default/objects/ProdutoPassageiro__c/fields/NumeroDocumento__c.field-meta.xml
<CustomField>
    <fullName>NumeroDocumento__c</fullName>
    <formula>Passageiro__r.NumeroDocumento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do Documento</label>
    <type>Text</type>
</CustomField>