force-app/main/default/objects/ProdutoPassageiro__c/fields/NumeroVoo__c.field-meta.xml
<CustomField>
    <fullName>NumeroVoo__c</fullName>
    <label>Número do Voo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>