force-app/main/default/objects/ProdutoPassageiro__c/fields/PassageiroOportunidade__c.field-meta.xml
<CustomField>
    <fullName>PassageiroOportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passageiro da Oportunidade</label>
    <referenceTo>PassageiroOportunidade__c</referenceTo>
    <relationshipLabel>Produtos do Passageiro</relationshipLabel>
    <relationshipName>ProdutosPassageiro</relationshipName>
    <type>Lookup</type>
</CustomField>