force-app/main/default/objects/ProdutoPassageiro__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <formula>ProdutoOportunidade__r.PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produto</label>
    <type>Text</type>
</CustomField>