force-app/main/default/objects/ProdutoPassageiro__c/fields/ProdutoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>ProdutoOportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto de Oportunidade</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Passageiros do Produto</relationshipLabel>
    <relationshipName>ProdutosPassageiro</relationshipName>
    <type>Lookup</type>
</CustomField>