force-app/main/default/objects/ProdutoPassageiro__c/fields/QtdsMalasMedias__c.field-meta.xml
<CustomField>
    <fullName>QtdsMalasMedias__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qtds. Malas Médias</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>