force-app/main/default/objects/ProdutoPassageiro__c/recordTypes/PassageiroVoo.recordType-meta.xml
<RecordType>
    <fullName>PassageiroVoo</fullName>
    <active>true</active>
    <description>Passageiro voo (PS. NÃO ALTERAR O RÓTULO)</description>
    <label>PassageiroVoo</label>
</RecordType>